--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -229,10 +229,82 @@ nav img{
     width: 27rem;
 }
 
+/** Figuras **/
+
+.seccion-figuras{
+    padding: 2rem 0;
+    position: relative;
+}
+
+.seccion-figuras::before{
+    content: '';
+    background-color: var(--colorBlanco);
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: .6;
+}
+
+.figuras{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding: 2rem 0;
+}
+
+.articulados{
+    position: relative;
+    height: 25rem;
+    width: 35rem;
+    overflow: hidden;
+    border-radius: 10px;
+
+}
+
+.articulados,
+.estatuas{
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+}
+
+.articulados img{
+    width: 100%;
+    height: 100%;
+    transition: all .5s ease-in-out;
+}
+
+.articulados .capa{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    color: var(--colorBlanco);
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.75);
+    transition: all .3s ease-in-out;
+    opacity: 0;
+}
+
+.capa h3{
+    color: var(--colorBlanco);
+}
+
+.articulados .capa:hover{
+    opacity: 1;
+    cursor: pointer;
+}
+
 /** Footer **/
 
 footer{
     border-top: 3px solid var(--colorNegro);
+    margin-top: 2rem;
 }
 
 .nav-footer{
