--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -300,6 +300,22 @@ nav img{
     cursor: pointer;
 }
 
+/** Sobre nosotros **/
+
+.nosotros{
+    display: inline-block;
+    padding-top: 5rem;
+    margin: 0 20rem;
+}
+
+.nosotros p{
+    font-size: 1.2rem;
+    font-weight: 700;
+    line-height: 1.5;
+    max-width: 80rem;
+    padding: 2rem 0;
+}
+
 /** Footer **/
 
 footer{
