cambios en contenedores

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -103,7 +103,7 @@ a{
     min-height: 90%;
     margin: 0 auto;
     border-radius: 10px;
-    border: 3px solid var(--colorNegro);
+    border: 5px solid var(--colorNegro);
 }
 
 /** Navegacion **/
@@ -224,7 +224,7 @@ nav img{
 }
 
 .destacados img:hover{
-    border-radius: 30px;
+    border-radius: 40px;
     height: 32rem;
     width: 27rem;
 }
@@ -232,7 +232,7 @@ nav img{
 /** Figuras **/
 
 .seccion-figuras{
-    padding: 2rem 0;
+    padding: 2rem;
     position: relative;
 }
 
